--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,8 +9,10 @@ body {
     border: none;
     resize: none;
     color: #000000;
-    border-left: 1px solid black;
+    /* border-left: 1px solid black; */
     padding: 10px;
+    outline: none;
+    height: 80px;
   }
   
   .jumbotron {
@@ -43,18 +45,27 @@ body {
   }
   
   .past {
-    background-color: #d3d3d3;
+    background-color: #c2c2c2;
     color: white;
   }
   
   .present {
-    background-color: #ff6961;
+    background-color: #ff7d76;
     color: white;
   }
   
   .future {
-    background-color: #77dd77;
+    background-color: #8dea8d;
     color: white;
+  }
+
+  td.item{
+    padding: 0px;
+    opacity: .85;
+  }
+
+  td.item:focus-within{
+    opacity: 1;
   }
   
   .saveBtn {
@@ -70,3 +81,15 @@ body {
     transition: all 0.3s ease-in-out;
   }
   
+  .custom-save-btn{
+    text-align: center !important; 
+    vertical-align: middle !important;
+    box-shadow: 0px 0px 20px rgb(134, 141, 164) inset;
+    opacity: .8;
+    font-size:2rem;
+  }
+  .custom-save-btn:hover{
+    box-sizing: border-box;
+    opacity: 1;
+
+  }
