--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -23,10 +23,6 @@ body {
     border-bottom: 10px solid black;
   }
   
-  .description {
-    white-space: pre-wrap;
-  }
-  
   .time-block {
     text-align: center;
     border-radius: 15px;
@@ -41,7 +37,7 @@ body {
   .hour {
     background-color: #ffffff;
     color: #000000;
-    border-top: 1px dashed #000000;
+    border-top: 1px dashed #b8b8b8 !important;
   }
   
   .past {
@@ -59,26 +55,20 @@ body {
     color: white;
   }
 
+  /* gets darker based on level of interaction */
   td.item{
     padding: 0px;
-    opacity: .85;
+    opacity: .8;
+    transition: all 0.7s ease-in-out;
+    border-top: 1px solid whitesmoke;
+    white-space: pre-wrap;
   }
 
+  td.item:hover{
+    opacity: .9;
+  }
   td.item:focus-within{
     opacity: 1;
-  }
-  
-  .saveBtn {
-    border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #06aed5;
-    color: white;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all 0.3s ease-in-out;
   }
   
   .custom-save-btn{
@@ -86,10 +76,14 @@ body {
     vertical-align: middle !important;
     box-shadow: 0px 0px 20px rgb(134, 141, 164) inset;
     opacity: .8;
-    font-size:2rem;
+    font-size:1.8rem;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border:none !important;
   }
   .custom-save-btn:hover{
     box-sizing: border-box;
     opacity: 1;
-
+    font-size: 2rem;
+    transition: all 0.3s ease-in-out;
   }
